[package]
authors           = ["Procivis"]
edition.workspace = true
license           = "Apache-2.0"
name              = "one-dev-services"
publish           = false
version           = "0.1.0"

[lib]
doctest = false

[dependencies]
one-core     = { version = "0.1.0", path = "../one-core" }
one-crypto   = { version = "0.1.0", path = "../one-crypto" }
reqwest      = { workspace = true }
shared-types = { version = "0.1.0", path = "../shared-types" }
strum        = { workspace = true }
thiserror    = { workspace = true }
time         = { workspace = true }
zeroize      = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["strum"]
