[package]
name = "proc-macros"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling     = "0.21"
syn         = "2.0"
quote       = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
serde.workspace         = true
serde_with.workspace    = true
utoipa.workspace        = true

[lints]
workspace = true
