[package]
authors           = ["Procivis"]
edition.workspace = true
license           = "Apache-2.0"
name              = "shared-types"
publish           = false
version.workspace = true

# disable doctests
[lib]
doctest = false

[features]
sea-orm = ["dep:sea-orm"]
utoipa  = ["dep:utoipa"]

[dependencies]
anyhow    = { version = "1.0" }
regex     = { workspace = true }
sea-orm   = { workspace = true, features = ["macros"], optional = true }
serde     = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
url       = { version = "2.5", features = ["serde"] }
utoipa    = { workspace = true, features = ["uuid"], optional = true }
uuid      = { workspace = true }

[lints]
workspace = true
