[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "standardized-types"
version.workspace = true

[dependencies]
anyhow.workspace     = true
proc-macros          = { version = "0.1.0", path = "../../lib/proc-macros" }
secrecy.workspace    = true
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
strum.workspace      = true
utoipa               = { workspace = true, optional = true }
uuid.workspace       = true

[lints]
workspace = true
